added libfftw3-dev and libfftw3-mpi back espresso wont compile without them

--- a/pressomancy_elastomer_gpu_extended/Dockerfile
+++ b/pressomancy_elastomer_gpu_extended/Dockerfile
@@ -14,6 +14,8 @@ RUN apt-get update && \
     python3-pip \
     openmpi-bin \
     libboost-all-dev \
+    libfftw3-dev \
+    libfftw3-mpi-dev \
     nvidia-cuda-toolkit \
     git
 
